src/objects/Propuesta_de_Evento__c.object
<CustomObject>
    <description>Objeto utilizado para modelar el proceso de liquidación y/o facturación a profesionales, clientes y compañías aseguradoras</description>
    <fields>
        <fullName>EV_AB_CAS_Confianza_en_la_red__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confianza en la red</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_AB_CAS_Evento_Ab_Facturado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evento Facturado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_AB_CAS_Evento_Ab_Liquidado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evento Liquidado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_AB_CAS_Evento_Automatico__c</fullName>
        <defaultValue>false</defaultValue>
        <description>este check estará seleccionado cuando el evento sea automático</description>
        <label>Evento automático</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_AB_CAS_Evento_Bloqueado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evento Bloqueado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_AB_DAT_Fecha_Facturacion__c</fullName>
        <label>Fecha Facturación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EV_AB_DAT_Fecha_Liquidacion__c</fullName>
        <label>Fecha Liquidación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EV_AB_DIV_Importe_a_liquidar_prof__c</fullName>
        <label>Importe a liquidar (Prof)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_AB_DIV_Importe_gestor__c</fullName>
        <label>Importe a Imputar (Gestor)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_AB_DIV_Importe_profesional__c</fullName>
        <label>Importe a Imputar (Prof)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_AB_FOR_Compania__c</fullName>
        <formula>EV_AB_LKP_Caso__r.CAS_LKP_Compania__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compañia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_AB_FOR_Descripcion__c</fullName>
        <formula>CASE(TEXT(EV_AB_SEL_Descripcion__c),
&apos;E01&apos;,&apos;Penalización de Guardia&apos;,
&apos;E02&apos;,&apos;Bonificación de Guardia&apos;,
&apos;E03&apos;,&apos;Pago Desplazamiento&apos;,
&apos;E04&apos;,&apos;Cobro Inspección Servicio&apos;,
&apos;E05&apos;,&apos;Impago liquidación&apos;,
&apos;E06&apos;,&apos;Gasto gestión impago liquidación&apos;,
&apos;E11&apos;,&apos;Cobro Reclamación&apos;,
&apos;E15&apos;,&apos;Pago Tramitación Errónea&apos;,
&apos;E16&apos;,&apos;Pago Gestión Errónea PER&apos;,
&apos;E17&apos;,&apos;Indemnización por Daños&apos;,
&apos;E18&apos;,&apos;Cobro Diferencia detectada en Auditoría&apos;,
&apos;E19&apos;,&apos;Sobrecoste Gestión por Tramitación de Factura&apos;,
&apos;E20&apos;,&apos;Devolución Sobrecoste Gestión por Tramitación de Factura&apos;,
&apos;E21&apos;,&apos;Sobrecoste de Gestión Telefónica&apos;,
&apos;E22&apos;,&apos;Devolución Sobrecoste Gestión Telefónica&apos;,
&apos;E29&apos;,&apos;Penalización por Desasignación de Servicio&apos;,
&apos;E37&apos;,&apos;Devolución penalización por desasignación&apos;,
&apos;E30&apos;,&apos;Penalización por &quot;Mala Calidad&quot;&apos;,
&apos;E31&apos;,&apos;Penalización por entregar &quot;Albarán Sin Firma&quot; del Cliente&apos;,
&apos;E34&apos;,&apos;Devolución penalización Albarán Sin firma&apos;,
&apos;E32&apos;,&apos;Penalización por &quot;Demora&quot; en la cita con el Cliente&apos;,
&apos;E33&apos;,&apos;Penalización por &quot;Servicio No Finalizado&quot; y Cerrado&apos;,
&apos;E36&apos;,&apos;Pago reparaciones MENBERSHIP SAE&apos;,
&apos;E25&apos;,&apos;Penalización Albaranes de Asistencia&apos;,
&apos;E26&apos;,&apos;Devolución Penalización Albaranes de Asistencia&apos;,
&apos;E27&apos;,&apos;Penalización Anulación Servicios&apos;, 
&apos;E23&apos;,&apos;Cobro de uniformes&apos;,
&apos;E24&apos;,&apos;Cobro rotulación y pintura furgonetas&apos;,
&apos;E28&apos;,&apos;Cobro Rappel Profesionales AF&apos;,
&apos;E35&apos;,&apos;Pago regularización E28&apos;,
&apos;E39&apos;,&apos;Pago regularización E23&apos;,
&apos;E12&apos;,&apos;Pago Reclamación&apos;,
&apos;E111&apos;,&apos;Imputación a Gestor&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descripción</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_AB_FOR_Direccion_Territorial__c</fullName>
        <formula>TEXT(EV_AB_LKP_Caso__r.CAS_SEL_Direccion_Territorial__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dirección Territorial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_AB_FOR_Procedencia__c</fullName>
        <formula>IF( ISBLANK(EV_AB_LKP_Caso__c) , EV_AB_LKP_Orden_de_Trabajo__r.Case.CAS_LKP_Procedencia__r.Name , EV_AB_LKP_Caso__r.CAS_LKP_Procedencia__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Procedencia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_AB_LKP_Abono__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Abono padre</label>
        <referenceTo>Propuesta_de_Abono__c</referenceTo>
        <relationshipLabel>Propuestas de Eventos</relationshipLabel>
        <relationshipName>Propuestas_de_Eventos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EV_AB_LKP_Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Caso relacionado al Evento/Abono</description>
        <label>Intervención</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Propuestas de Eventos</relationshipLabel>
        <relationshipName>EV_AB_REL_Caso</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EV_AB_LKP_Cuenta_Profesional_Historico__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cuenta Profesional Contrato (Histórico) vinculada al Evento. Representa la FK al objeto Account. Para resolver esta FK en integración (servicios web) y migración (plantillas DataLoader) se debe informar el valor del campo External ID del objeto Account (Account.CUE_TXT_Identificador): Código único del Profesional Contrato</description>
        <label>Cuenta Profesional (Histórico)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>El valor no existe o no coinciden los criterios de filtro. La cuenta debe ser un Profesional Contrato.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Profesional Contrato</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Propuestas de Eventos histórico</relationshipLabel>
        <relationshipName>Propuestas_de_Eventos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EV_AB_LKP_Cuenta_profesional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para vincular eventos a cuentas de profesional</description>
        <label>Cuenta Profesional Contrato</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Profesional Contrato</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Propuestas de Eventos</relationshipLabel>
        <relationshipName>Propuestas_de_Eventos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EV_AB_LKP_Imputar_a_gestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Imputar a (Gestor)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Propuestas_de_Eventos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EV_AB_LKP_Imputar_a_profesional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Imputar a (Prof)</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Propuestas de Eventos (Imputar a)</relationshipLabel>
        <relationshipName>Propuestas_de_Eventos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EV_AB_LKP_Liquidar_a_prof__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Liquidar a</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Propuestas de Eventos (Liquidar a)</relationshipLabel>
        <relationshipName>Propuestas_de_Eventos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EV_AB_LKP_Orden_de_Trabajo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Orden de Trabajo relacionada al Evento/Abono</description>
        <label>Número Servicio</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipName>EV_AB_REL_Orden_de_Trabajo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EV_AB_LKP_Propuesta_de_Evento_Economico__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Evento padre</label>
        <referenceTo>Propuesta_de_Evento__c</referenceTo>
        <relationshipLabel>Propuestas de Eventos</relationshipLabel>
        <relationshipName>Propuestas_de_Eventos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EV_AB_SEL_Departamento_Imputacion__c</fullName>
        <label>Departamento Imputación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comercial</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_AB_SEL_Departamento_Solicitante__c</fullName>
        <label>Departamento Solicitante</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Departamento_Solicitante</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_AB_SEL_Descripcion__c</fullName>
        <label>Código</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GBL_SEL_Codigo_evento</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_AB_SEL_Estado__c</fullName>
        <label>Estado</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>02</fullName>
                    <label>Aprobado</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Rechazado</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <default>true</default>
                    <label>Nuevo</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>Anulado</label>
                </value>
                <value>
                    <fullName>01</fullName>
                    <isActive>false</isActive>
                    <label>En Curso</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_AB_SEL_Motivo_devolucion__c</fullName>
        <label>Motivo devolución</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EV_AB_SEL_Descripcion__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>Error en revisión de albarán</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Error Informático</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Pago diferencia material</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>Error apertura</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>Error confirmación</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>Error en tramitación</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>Servicio anulado</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>Visita por reclamación</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>OTROS</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>ERROR TRAMITACIÓN</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>TRABAJOS MAL REALIZADO</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>SUPERA LÍMITE</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>DEVOLUCIÓN PRIMA</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>LOCALIZACIÓN ERRÓNEA</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>DEVOLUCIÓN CONTADO</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>NO COBERTURA</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>DESPERFECTOS</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>ERROR INFORMATICO</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>ERROR VALORACIONES</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>DEVOLUCIÓN VISITA</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>GESTO COMERCIAL</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>MINUTA PERITO</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>ERROR IVA</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>EXCESO MANO DE OBRA</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>EXCESO MATERIAL</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>EXCESO MANO DE OBRA Y MATERIAL</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>DEVOLUCIÓN FEE</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>INDEMNIZACIÓN</label>
                </value>
                <value>
                    <fullName>29</fullName>
                    <label>ERROR VALORACIONES (BAREMO CIA)</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>ERROR CEVECO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_AB_SEL_Procedencias_bloqueadas__c</fullName>
        <label>Procedencias bloqueadas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GBL_SEL_N_Procedencia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_AB_SEL_Tipo_de_Evento__c</fullName>
        <label>Tipo de Evento</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EV_AB_SEL_Descripcion__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cobro</fullName>
                </value>
                <value>
                    <fullName>Pago</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_AB_SEL_Tipo_de_red__c</fullName>
        <label>Tipo de red</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GBL_SEL_Tipos_de_red</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_AB_TXT_Identificador__c</fullName>
        <description>Identificador externo para la carga de eventos</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EV_AB_TXT_Observaciones__c</fullName>
        <description>Campo que será obligatorio  rellenar si se rechaza la propuesta de evento económico.</description>
        <label>Observaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EV_DIV_Importe_a_imputar_Departamento__c</fullName>
        <label>Importe a imputar (Departamento)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Propuesta de Evento Económico</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EV_AB_LKP_Caso__c</columns>
        <columns>EV_AB_FOR_Descripcion__c</columns>
        <columns>EV_AB_SEL_Estado__c</columns>
        <columns>EV_AB_LKP_Propuesta_de_Evento_Economico__c</columns>
        <columns>EV_AB_CAS_Evento_Ab_Facturado__c</columns>
        <columns>EV_AB_SEL_Descripcion__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>EV-{0000000}</displayFormat>
        <label>Evento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Propuestas de Eventos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cobro_Imputacion</fullName>
        <active>true</active>
        <errorConditionFormula>!$Setup.Baipas__c.Saltar_Regla_Validacion__c

&amp;&amp;

ISPICKVAL(EV_AB_SEL_Tipo_de_Evento__c , &apos;Cobro&apos;)

&amp;&amp;

(

(

 ISBLANK(EV_AB_LKP_Imputar_a_gestor__c)  &amp;&amp; 

 ISBLANK(EV_AB_LKP_Imputar_a_profesional__c) &amp;&amp; 

 ISBLANK(EV_DIV_Importe_a_imputar_Departamento__c )

)

||

NOT( ISBLANK( EV_AB_LKP_Liquidar_a_prof__c ))

)</errorConditionFormula>
        <errorMessage>El evento es de cobro, debe rellenar los campos correspondientes a imputación. Los campos de liquidación no deben estar rellenos.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Gestor_Ev_estado_Nuevo</fullName>
        <active>true</active>
        <description>El gestor de reclamaciones solamente puede crear Eventos manuales en estado &quot;Nuevo&quot;.</description>
        <errorConditionFormula>AND($Profile.Name = &quot;Gestor Reclamaciones&quot;,
     EV_AB_CAS_Evento_Automatico__c == false,
     NOT(ISPICKVAL(EV_AB_SEL_Estado__c,&quot;04&quot;)),
      ISNEW()
         
)</errorConditionFormula>
        <errorMessage>El evento solo se puede crear en estado &quot;Nuevo&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Importes_incorrectos</fullName>
        <active>true</active>
        <errorConditionFormula>!$Setup.Baipas__c.Saltar_Regla_Validacion__c

&amp;&amp;

CASE( TEXT(EV_AB_SEL_Descripcion__c) ,
 &apos;E19&apos;,  IF(AND(EV_AB_DIV_Importe_profesional__c &lt;&gt; 10,
             EV_AB_DIV_Importe_profesional__c &lt;&gt; 40,
             EV_AB_DIV_Importe_profesional__c &lt;&gt; 90),1,0),
 &apos;E02&apos;, IF(EV_AB_DIV_Importe_a_liquidar_prof__c &lt;&gt; 90,1,0),
 &apos;E25&apos;, IF(EV_AB_DIV_Importe_profesional__c &lt;&gt; 15,1,0),
 &apos;E26&apos;, IF(EV_AB_DIV_Importe_a_liquidar_prof__c &lt;&gt; 15,1,0),
 &apos;E37&apos;, IF(EV_AB_DIV_Importe_a_liquidar_prof__c &lt;&gt; 25,1,0),
 &apos;E30&apos;, IF(EV_AB_DIV_Importe_profesional__c &lt;&gt; 30,1,0),
 &apos;E31&apos;, IF(EV_AB_DIV_Importe_profesional__c &lt;&gt; 25,1,0),
 &apos;E32&apos;, IF(EV_AB_DIV_Importe_profesional__c &lt;&gt; 15,1,0),
 &apos;E33&apos;, IF(EV_AB_DIV_Importe_profesional__c &lt;&gt; 20,1,0),
 &apos;E34&apos;, IF(EV_AB_DIV_Importe_a_liquidar_prof__c &lt;&gt; 25,1,0),
 0) = 1</errorConditionFormula>
        <errorMessage>El importe introducido es incorrecto para este código de evento.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_se_puede_modificar_evento_liquidado</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISCHANGED(EV_AB_CAS_Evento_Ab_Facturado__c)), EV_AB_CAS_Evento_Ab_Facturado__c,NOT(ISNEW()),
!$Setup.Baipas__c.Saltar_Regla_Validacion__c)</errorConditionFormula>
        <errorMessage>No se pueden modificar eventos que ya estén liquidados</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pago_Liquidacion</fullName>
        <active>true</active>
        <errorConditionFormula>!$Setup.Baipas__c.Saltar_Regla_Validacion__c

&amp;&amp;

ISPICKVAL(EV_AB_SEL_Tipo_de_Evento__c , &apos;Pago&apos;)

&amp;&amp;
(
(

 NOT(ISBLANK(EV_AB_LKP_Imputar_a_gestor__c))  ||

 NOT(ISBLANK(EV_AB_LKP_Imputar_a_profesional__c)) ||

 NOT(ISBLANK(EV_DIV_Importe_a_imputar_Departamento__c))

)

||

ISBLANK( EV_AB_LKP_Liquidar_a_prof__c )
)</errorConditionFormula>
        <errorMessage>El evento es de pago, debe rellenar los campos correspondientes a liquidación. Los campos de  imputación no deben estar rellenos.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rellenar_Observaciones_Evento_Rechazado</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(EV_AB_SEL_Estado__c ,&quot;03&quot;)&amp;&amp; (EV_AB_TXT_Observaciones__c = &apos;&apos;)</errorConditionFormula>
        <errorMessage>Si se rechaza la propuesta de Evento hay que indicar el motivo en el campo &apos;Observaciones&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rellenar_registro_asociado</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( EV_AB_LKP_Cuenta_profesional__c ),ISBLANK( EV_AB_LKP_Caso__c ),ISBLANK( EV_AB_LKP_Orden_de_Trabajo__c ))</errorConditionFormula>
        <errorMessage>Es necesario asociar al evento un servicio, una cuenta o una intervención.</errorMessage>
    </validationRules>
</CustomObject>